# infralens-georgia

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Makefile  README.md  docker-compose.yml
apps/api/: Dockerfile  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_initial_v1_schema.py  0002_unaccent_tsv.py
apps/api/app/: main.py
apps/api/app/agents/: nodes.py  runner.py
apps/api/app/api/: health.py  incidents.py  ingest.py  search.py
apps/api/app/core/: config.py  health.py
apps/api/app/db/: session.py
apps/api/app/ingestion/: chunker.py  constants.py  normalizer.py  pii.py  seed.py
apps/api/app/llmops/: ollama.py  prompts.py  tracing.py
apps/api/app/models/: tables.py
apps/api/app/rag/: citation.py  embeddings.py  fusion.py  retrieval.py
apps/api/app/schemas/: agents.py  health.py  incidents.py  ingest.py  search.py
apps/api/app/workers/: incidents.py  ingestion.py  queue.py
apps/api/tests/: test_agents.py  test_health.py  test_incidents.py  test_ingestion.py  test_llmops.py  test_rag_citation.py  test_rag_fusion.py  test_search_endpoint.py  test_settings.py  test_worker_incidents.py
apps/web/: Dockerfile  package-lock.json  package.json
docs/: architecture.md
prompts/: classify_incident.yaml  extract_entities.yaml  json_correction.yaml
scripts/: bootstrap-ollama.sh  smoke-analysis.py
seed_data/procurement/: batumi_boulevard_lighting_2022.json  kutaisi_street_lamps_2023.json  tbilisi_emergency_repair_2024.json  tbilisi_led_upgrade_2022.json  tbilisi_streetlight_maintenance_2023.json
(+4 files in other folders)
